# tinyCore

./: CMakeLists.txt  README.md
cmake/check/: CheckCompiler.cmake  CheckPlatform.cmake
cmake/find/: FindBoost.cmake  FindCurl.cmake  FindFFmpeg.cmake  FindGperfTools.cmake  FindLibmemcached.cmake  FindModules.cmake  FindMysql.cmake  FindOpenCV.cmake  FindOpenSSL.cmake  FindPugixml.cmake  FindRapidjson.cmake
cmake/traverse/: TraverseCMakeLists.cmake  TraverseInclude.cmake  TraverseLibrary.cmake  TraverseSet.cmake  TraverseSource.cmake
example/demo/: CMakeLists.txt  main.cpp  main.h
example/log/: CMakeLists.txt  example.cpp  example.h  main.cpp  main.h
